--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,8 +1,19 @@
 footer {
-    background-color: white;
+    display: flex;
+    border-top: 1px solid #CCCCCC;
     height: 60px;
     width: 100%;
-    border-top: 1px solid #CCCCCC;
-    text-align: center;
+    background-color: white;
+    align-items: stretch;
+    flex-direction: row;
+    justify-content: center;
     bottom: 0;
+    position: fixed;
+}
+
+.footText {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    line-height: 60px;
 }
